@startuml

abstract class Pizza{
 abstact void receipe()
 void bake()
 void cut()
 void pack()
}
class VegPizza
{

}
 enum VegContent
 {
   CHEESE
   CORN
 }
class NonVegPizza
{

}
enum NonVegContent
{
  CHICKEN
  EGG
}

VegPizza o-- VegContent : contains
NonVegPizza o-- NonVegContent : contains

class CheesePizza{
}
class CornPizza{
}
class ChickenPizza{
}
class EggPizza
{
}

Pizza <-- VegPizza : extends
Pizza <-- NonVegPizza : extends
NonVegPizza <-- ChickenPizza : extends
NonVegPizza <-- EggPizza : extends
VegPizza <-- CornPizza : extends
VegPizza <-- CheesePizza : extends

class PizzaStore{
 Pizza P
 void orderPizza(String)
}

class Test
{
 public main()
}

class PizzaFactory
{

}
class NagpurPizzaFactory
{
}
class PunePizzaFactory
{
}
class MumbaiPizzaFactory
{
}

NagpurPizzaFactory --> PizzaFactory : extends
PunePizzaFactory --> PizzaFactory : extends
MumbaiPizzaFactory --> PizzaFactory : extends

class PizzaStore
{
}
class BardiPizzaStore
{
}
class ShankarNagarPizzaStore
{
}
class ItwariPizzaStore
{
}

BardiPizzaStore --> PizzaStore :extends
ShankarNagarPizzaStore --> PizzaStore :extends
ItwariPizzaStore --> PizzaStore :extends

@enduml